--- a/css/front.css
+++ b/css/front.css
@@ -9,21 +9,27 @@ body {
     margin-left:600px;
     width:30%;
     margin-top:70px;
+    border-style: solid;
+    border-color: black;
+    border-radius:0.3rem;
+    border-width:1px;
+    text-align:center; 
    
 }
 
-#field{
-    border:solid black;
-    border-width: 0.1px;
-    border-radius: 1rem ;
-
+p{
+    text-align: center;
+    margin-top:10px;
+    font-family:sans-serif;
+    font-size:xx-large;
 }
+
 .inputbutton1 {
     text-align: center;
     padding: 5px;
     margin:10px;
     margin-left: 30px;
-    width:200px;
+    width:50%;
     border-radius:0.1rem;
    
 }.inputbutton2 {
@@ -31,7 +37,7 @@ body {
     padding: 5px;
     margin:10px;
     margin-left: 8px;
-    width:200px;
+    width:50%;
     border-radius:0.1rem;
    
 }
@@ -41,7 +47,7 @@ body {
     padding: 5px;
     margin:10px;
     margin-left:67px;
-    width:200px;
+    width:50%;
     border-radius:0.1rem;
    
 }
@@ -50,7 +56,6 @@ body {
    
     padding: 5px;
     margin:10px;
-    margin-left: 150px;
     background-color:#4CAF50;
     border: none;
     border-radius: 0.3rem;
@@ -59,6 +64,7 @@ body {
     text-align: center;
     display: inline-block;
     font-size: 16px;
+
 
 }
 
@@ -95,8 +101,8 @@ body {
 
 
   #image1 {
-      height :300px;
-      width:500px;
+      height :50%;
+      width:100%;
   }
 
   #image2 {
@@ -106,14 +112,9 @@ body {
 
 
 
- legend{
-
-    font-family:sans-serif;
-    font-size:xx-large;
- }
 
  span{
-
+    margin:10px;
     font-family:sans-serif;
     font-size:medium;
     font-weight:0.1px;
@@ -124,58 +125,71 @@ body {
     #image2 {
         display:none;
     }
+    #image1 {
+        height :200px;
+        width:200px;
+    }
     #left {
         margin-top:0px;
-        height:300px;
+        height:40%;
+        width:50%;
         margin-left:200px;
         
     }
 
     #form {
-        margin-left:200px;
         width:30%;
         margin-top:300px;
+      
        
     }
-
-    .topnav{
-
-        height: 80%;
-        width: 100px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        padding-top: 20px;
-    }
  
-    .topnav a{
-        padding: 6px ;
-        text-decoration: none;
-        font-size: 17px;
-        color: #818181;
-        display: block;
+    .topnav a {
+        float: none;
+        width: 100%;
+        display:block;
     }
-
-
-    body {
-        margin: 0;
-        font-family:  sans-serif;
-        background-color:chartreuse;
-      }
       
   }
 
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and ( max-width: 900px) {
     body {
         margin: 0;
         font-family:  sans-serif;
         background-color:lightseagreen;
       }
-      
+      #image2 {
+        display:none;
+    }
+
+    #form {
+        text-align:center; 
+        width:60%;
+        margin-top:200px;
+        background-color:blanchedalmond;
+        margin-left:40px;
+       
+    }
+ 
+
+      #left {
+        margin:0px;
+        width: 120px; 
+        margin-right: 40px;
+       
+      }
+      #image1 {
+        height :300%;
+        width:300%;
+        margin-right: 0px;
+    }
+    .topnav a {
+        float: none;
+        width: 100%;
+        display:block;
+    }
 } 
+
 
